more tailwind insertion, fix toolbar spacing, show input problem in msp solver

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Cosmos Vite Renderer</title>
+    <title>Schematic Trace Solver</title>
+    <script>
+      const script = document.createElement("script")
+      script.src = "https://cdn.tailwindcss.com"
+      document.head.appendChild(script)
+    </script>
   </head>
   <body>
     <div id="root"></div>
